# everyonetoday-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yml
sql/: init-tables.sql
src/: connection_manager.rs  main.rs
src/routes/: get_health.rs  get_posts.rs  mod.rs  post_write.rs
