[package]
name = "everyonetoday-api"
version = "1.0.0"
authors= ["Javier Albero"]
description = "A public API for everyone to leave some words on it."
repository = "https://github.com/Splashling1789/everyonetoday-api"
readme = "README.md"
edition = "2021"

[dependencies]
rocket ={version = "0.5.0-rc.3", features = ["json"]}
rocket_db_pools = {version="0.1.0-rc.3", features = ["sqlx_postgres"]}
dotenv = "0.15.0"
sqlx= {version = "0.6.3", features = ["chrono"]}
chrono= {version= "0.4.28", features = ["serde"]}