[package]
name = "everyonetoday-api"
version = "1.1.0"
authors= ["Javier Albero"]
description = "A public API for everyone to leave some words on it."
repository = "https://github.com/Splashling1789/everyonetoday-api"
readme = "README.md"
edition = "2021"

[dependencies]
rocket ={version = "0.5.1", features = ["json"]}
dotenv = "0.15.0"

[dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["serde"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["chrono"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]